Remove Nashorn Javascript Engine (#5489)